common/tests/badSyntax/newlineOnString.output
newlineOnString.tyco:6.33: 
Newline within string
newlineOnString.tyco:6.54: 
Syntax error at end of file
2 errors
