common/tests/badSyntax/newlineOnString.tyco
-- Syntax Error

-- A newline within a string

new x
x ! lala["A string so long that 
a new line comes by"